--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
-        android:name="com.example.fetchrewards.MyApplication"
+        android:name="com.example.fetchrewards.FetchRewardsApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
@@ -17,7 +17,7 @@
         android:theme="@style/Theme.FetchRewards"
         tools:targetApi="31">
         <activity
-            android:name="com.example.fetchrewards.views.MainActivity"
+            android:name="com.example.fetchrewards.views.FetchRewardsActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
